--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,14 @@
 {
     "cSpell.words": [
+        "ARGB",
         "audlt",
         "Bảng",
         "cupertino",
         "Hạng",
         "Khám",
+        "responsecode",
         "Sách",
+        "THÊM",
         "Tiếp",
         "toonder",
         "Trang",
