--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   http: ^0.13.5
   carousel_slider: ^4.2.1
   smooth_page_indicator: ^1.0.1
+  hexcolor: ^3.0.1
 
 dev_dependencies:
   flutter_test:
