toonder_with_bloc

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,69 @@
 {
-    "cSpell.words": [
-        "ARGB",
-        "audlt",
-        "Bảng",
-        "cupertino",
-        "Hạng",
-        "Khám",
-        "responsecode",
-        "Sách",
-        "THÊM",
-        "Tiếp",
-        "toonder",
-        "Trang",
-        "Uncompress"
-    ]
+  "cSpell.words": [
+    "ARGB",
+    "audlt",
+    "Bảng",
+    "Bình",
+    "Chọn",
+    "chúng",
+    "chương",
+    "Controler",
+    "Cường",
+    "cupertino",
+    "Đăng",
+    "Danh",
+    "dịch",
+    "điểm",
+    "getbanner",
+    "getlistcategory",
+    "giao",
+    "Hạng",
+    "hexcolor",
+    "Khám",
+    "khẩu",
+    "khóa",
+    "khoản",
+    "kiện",
+    "Lịch",
+    "Liên",
+    "loại",
+    "lòng",
+    "LTRB",
+    "luận",
+    "Lượt",
+    "mainhome",
+    "ngay",
+    "Ngôn",
+    "nguồn",
+    "nhận",
+    "nhập",
+    "nhật",
+    "Nhiệm",
+    "overscroll",
+    "Phương",
+    "responsecode",
+    "Sách",
+    "sieu",
+    "tabcontroller",
+    "Tháng",
+    "Thay",
+    "THÊM",
+    "Thông",
+    "thống",
+    "thức",
+    "thực",
+    "Tiếp",
+    "Toàn",
+    "toonder",
+    "Trần",
+    "Trang",
+    "trên",
+    "trước",
+    "Truyện",
+    "Tuần",
+    "Uncompress",
+    "viên",
+    "vsync",
+    "xuất"
+  ]
 }
